--- a/Semester 1/CS1704 - FDS/preprocessing.ipynb
+++ b/Semester 1/CS1704 - FDS/preprocessing.ipynb
@@ -448,6 +448,43 @@
    "source": [
     "#### Violin Plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5a719809",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "OneHotEncoder.__init__() got an unexpected keyword argument 'sparse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Dataset with 3 categorical columns\u001b[39;00m\n\u001b[32m      5\u001b[39m X = np.array([\n\u001b[32m      6\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mPetrol\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      7\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mBlue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mHonda\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      8\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mGreen\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mElectric\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTesla\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      9\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     10\u001b[39m ])\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m encoder = \u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43msparse\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m encoded = encoder.fit_transform(X)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCategories:\u001b[39m\u001b[33m\"\u001b[39m, encoder.categories_)\n",
+      "\u001b[31mTypeError\u001b[39m: OneHotEncoder.__init__() got an unexpected keyword argument 'sparse'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# Dataset with 3 categorical columns\n",
+    "X = np.array([\n",
+    "    [\"Red\", \"Petrol\", \"Toyota\"],\n",
+    "    [\"Blue\", \"Diesel\", \"Honda\"],\n",
+    "    [\"Green\", \"Electric\", \"Tesla\"],\n",
+    "    [\"Red\", \"Diesel\", \"Toyota\"]\n",
+    "])\n",
+    "\n",
+    "encoder = OneHotEncoder(sparse=False)\n",
+    "encoded = encoder.fit_transform(X)\n",
+    "\n",
+    "print(\"Categories:\", encoder.categories_)\n",
+    "print(\"Encoded:\\n\", encoded)"
+   ]
   }
  ],
  "metadata": {
