--- a/Semester 1/CS1704 - FDS/preprocessing.ipynb
+++ b/Semester 1/CS1704 - FDS/preprocessing.ipynb
@@ -5,8 +5,14 @@
    "id": "482d9ffe",
    "metadata": {},
    "source": [
-    "# Data Preprocessing\n",
-    "\n",
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47d69fbb",
+   "metadata": {},
+   "source": [
     "In the real world, the data we get is not always clean and ready to use. There may be missing values, features on different scales and non-number values.\n",
     "\n",
     "<br>\n",
@@ -19,13 +25,23 @@
    "id": "e3a9d781",
    "metadata": {},
    "source": [
-    "## SKLearn Library\n",
-    "\n",
+    "## SKLearn Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4718fb",
+   "metadata": {},
+   "source": [
     "In Python, a library called `sklearn` (SciKit Learn) offers a wide variety of pre-processing transformers. It goes well with `numpy`, a library used for creating and processing numerical arrays.\n",
     "\n",
     "<br>\n",
     "\n",
-    "It is important to use the same set of pre-processing for both the training data and the testing data. SKLearn offers a pipeline that makes it easy to chain multiple pre-processing transformers and apply them uniformly in the training data and the testing data.\n",
+    "It is important to use the same set of pre-processing for both the training data and the testing data. SKLearn offers a pipeline that makes it easy to chain multiple pre-processing transformers and apply them uniformly in the training data and the testing data. Here is a list of libraries provided by SKLearn for data pre-processing:\n",
+    "- Data Cleaning\n",
+    "- Feature Extraction\n",
+    "- Feature Reduction\n",
+    "- Feature Expansion\n",
     "\n",
     "<br>\n",
     "\n",
@@ -42,7 +58,14 @@
    "id": "cf9b1360",
    "metadata": {},
    "source": [
-    "### Imputer\n",
+    "### Imputer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf9a77aa",
+   "metadata": {},
+   "source": [
     "Imputers are used to handle missing values in a dataset. The way imputers work is they rely on nearby data to the missing values and fill in the gap by doing some process with the nearby data.\n",
     "\n",
     "<br>\n",
@@ -65,7 +88,14 @@
    "id": "2fad6571",
    "metadata": {},
    "source": [
-    "#### SimpleImputer\n",
+    "#### SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "450b154f",
+   "metadata": {},
+   "source": [
     "This kind of imputer expects a 2D array, and fills in the missing values by checking the values in the column, and applies a strategy to compute a result with those values. The strategies available are:\n",
     "- mean: Computes the mean of other datas and fills in the result\n",
     "- median: Computes the median of other datas and fills in the result\n",
@@ -83,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "55dffcb4",
    "metadata": {},
    "outputs": [],
@@ -100,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4ba2fb5d",
    "metadata": {},
    "outputs": [
@@ -113,7 +143,7 @@
        "       [1., 4.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2f5efb03",
    "metadata": {},
    "outputs": [
@@ -144,7 +174,7 @@
        "       [1., 4.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1705ab4a",
    "metadata": {},
    "outputs": [
@@ -175,7 +205,7 @@
        "       [1., 4.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4373242e",
    "metadata": {},
    "outputs": [
@@ -206,7 +236,7 @@
        "       [1., 4.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "045ef81d",
    "metadata": {},
    "outputs": [
@@ -237,7 +267,7 @@
        "       [8.        , 2.        , 5.        ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,10 +284,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1024755",
+   "metadata": {},
+   "source": [
+    "#### KNNImputer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4749d7a1",
    "metadata": {},
    "source": [
-    "#### KNNImputer\n",
     "This kind of imputer expects a 2D array data, and the missing values are filled by computing the mean of `n` nearest neighbours, where `n` is a value provided by the user.\n",
     "\n",
     "<br>\n",
@@ -305,20 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e0b943c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 2.],\n",
-       "       [1., 3.],\n",
-       "       [7., 6.],\n",
-       "       [1., 4.]])"
+       "array([[1. , 2. , 4. ],\n",
+       "       [3. , 4. , 3. ],\n",
+       "       [5.5, 6. , 5. ],\n",
+       "       [8. , 8. , 7. ]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,8 +366,17 @@
     "from sklearn.impute import KNNImputer\n",
     "\n",
     "imp = KNNImputer(n_neighbors=2)\n",
+    "X = [[1, 2, np.nan], [3, 4, 3], [np.nan, 6, 5], [8, 8, 7]]\n",
     "imp.fit(X)\n",
     "imp.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "673719f6",
+   "metadata": {},
+   "source": [
+    "### Scaler"
    ]
   },
   {
@@ -338,8 +384,6 @@
    "id": "d295d7a6",
    "metadata": {},
    "source": [
-    "### Scaler\n",
-    "\n",
     "Scalers are used to scale numbers so all of them are on the same scale. When values are on different scales, convergeence of iterative optimization procedures becomes slower.\n",
     "\n",
     "<br>\n",
@@ -356,11 +400,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da3f0caa",
+   "metadata": {},
+   "source": [
+    "#### Standard Scaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ee64101",
    "metadata": {},
    "source": [
-    "#### Standard Scaler\n",
-    "\n",
     "Transforms the original feature `x` into `x'` using the formula: \n",
     "$$x \\text {'} = \\frac{x - \\mu}{\\sigma} \\text {, where } \\mu \\text { = Mean; } \\sigma \\text { = Standard Deviation}$$\n",
     "\n",
@@ -371,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3ff8f8e9",
    "metadata": {},
    "outputs": [
@@ -387,7 +437,7 @@
        "       [-2.42395731]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,8 +461,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d83ed307",
+   "metadata": {},
+   "source": [
+    "Transforms the original feature `x` into `x'` using the formula: \n",
+    "$$x \\text {'} = \\frac{x - x_\\text {min}}{x_\\text {max} - x_\\text {min}}$$\n",
+    "Where $x_\\text {min}$ is the minimum value in the matrix and $x_\\text {max}$ is the maximum value in the matrix. The scaled matrix has values from to 0 to 1, with both ends being present in any such matrix.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "To use this scaler, import the `MinMaxScaler` class from `sklearn.preprocessing`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cf6d7d9f",
    "metadata": {},
    "outputs": [],
@@ -422,10 +486,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "030aabb6",
+   "metadata": {},
+   "source": [
+    "## Seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9ff8bef",
    "metadata": {},
    "source": [
-    "## Seaborn\n",
     "This library in Python is uses `matplotlib` library underneath to plot graphs using provided data. It will be used to visualise random distributions.\n",
     "\n",
     "<br>\n",
@@ -451,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5a719809",
    "metadata": {},
    "outputs": [
@@ -462,7 +533,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Dataset with 3 categorical columns\u001b[39;00m\n\u001b[32m      5\u001b[39m X = np.array([\n\u001b[32m      6\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mPetrol\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      7\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mBlue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mHonda\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      8\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mGreen\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mElectric\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTesla\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      9\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     10\u001b[39m ])\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m encoder = \u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43msparse\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m encoded = encoder.fit_transform(X)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCategories:\u001b[39m\u001b[33m\"\u001b[39m, encoder.categories_)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Dataset with 3 categorical columns\u001b[39;00m\n\u001b[32m      5\u001b[39m X = np.array([\n\u001b[32m      6\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mPetrol\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      7\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mBlue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mHonda\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      8\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mGreen\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mElectric\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTesla\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      9\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33mRed\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mDiesel\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mToyota\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     10\u001b[39m ])\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m encoder = \u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43msparse\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m encoded = encoder.fit_transform(X)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCategories:\u001b[39m\u001b[33m\"\u001b[39m, encoder.categories_)\n",
       "\u001b[31mTypeError\u001b[39m: OneHotEncoder.__init__() got an unexpected keyword argument 'sparse'"
      ]
     }
