--- a/Semester 1/CS1704 - FDS/preprocessing.ipynb
+++ b/Semester 1/CS1704 - FDS/preprocessing.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "55dffcb4",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,8 @@
     "Z = [[12], [2], [4], [-3], [6], [-5], [-100]]\n",
     "A = [[1], [2], [3], [9], [2], [3], [1]]\n",
     "B = [[1, \"human\", \"gamer\"], [2, \"robot\", \"machine\"], [0, \"bot\", \"speaker\"]]\n",
-    "C = [[i] for i in range(1, 11)]"
+    "C = [[i] for i in range(1, 11)]\n",
+    "D = [{'action', 'comedy'}, {'comedy'}, {'action', 'thriller'}, {'science-fiction', 'action', 'thriller'}]"
    ]
   },
   {
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf6d7d9f",
    "metadata": {},
    "outputs": [
@@ -482,7 +483,7 @@
        "       [0.        ]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "81501231",
    "metadata": {},
    "outputs": [
@@ -535,7 +536,7 @@
        "       [-1.  ]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "79dbc091",
    "metadata": {},
    "outputs": [
@@ -599,7 +600,7 @@
        "       [-11.33333333]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "5c281eca",
    "metadata": {},
    "outputs": [
@@ -643,7 +644,7 @@
        "       [0.       ]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "300831f2",
    "metadata": {},
    "outputs": [
@@ -713,7 +714,7 @@
        "       [1., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "4cce0eba",
    "metadata": {},
    "outputs": [
@@ -754,7 +755,7 @@
        "array([0, 1, 2, 3, 1, 2, 0])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "43b16a8b",
    "metadata": {},
    "outputs": [
@@ -795,7 +796,7 @@
        "       [0., 0., 2.]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "7934b47a",
    "metadata": {},
    "outputs": [
@@ -878,7 +879,7 @@
        "       [6.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,8 +898,122 @@
    "id": "4eae997b",
    "metadata": {},
    "source": [
-    "### Binirizer\n",
+    "### Binarizer\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5fc8a69",
+   "metadata": {},
+   "source": [
+    "A binarizer is used to classify features or categories in 0s and 1s based on their presence. There are two kinds of binarizers:\n",
+    "- LabelBinarizer\n",
+    "- MultiLabelBinarizer\n",
+    "\n",
+    "To use binerizers, import `sklearn.preprocessing`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d89d49",
+   "metadata": {},
+   "source": [
+    "#### LabelBinarizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8561d4b1",
+   "metadata": {},
+   "source": [
+    "#### MultiLabelBinarizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88d00f8",
+   "metadata": {},
+   "source": [
+    "Creates a matrix where columns represent each value and rows represent their presence in each row of the given data in 0s and 1s. \n",
+    "<br>\n",
+    "\n",
+    "If the cell has 0, that particular label is not present in that row, otherwise it is.\n",
+    "<br>\n",
+    "\n",
+    "It is different from LabelBinarizer because MultiLabelBinarizer accepts a multi-column matrix as input, whereas LabelBinarizer accepts only a column matrix.\n",
+    "\n",
+    "It can be used by importing the `LabelBinarizer` class from the `sklearn` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fcfd7e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [1, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "lb = LabelBinarizer()\n",
+    "lb.fit_transform(np.array(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc57a62c",
+   "metadata": {},
+   "source": [
+    "Creates a matrix where columns represent each value and rows represent their presence in each row of the given data in 0s and 1s. \n",
+    "<br>\n",
+    "\n",
+    "If the cell has 0, that particular label is not present in that row, otherwise it is.\n",
+    "\n",
+    "It can be used by importing the `MultiLabelBinarizer` class from the `sklearn` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b01d4e22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [1, 0, 0, 1],\n",
+       "       [1, 0, 1, 1]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "\n",
+    "mlb = MultiLabelBinarizer()\n",
+    "mlb.fit_transform(np.array(D))"
    ]
   }
  ],
