--- a/Semester 1/CS1704 - FDS/supervised_learning_II.ipynb
+++ b/Semester 1/CS1704 - FDS/supervised_learning_II.ipynb
@@ -541,7 +541,58 @@
    "cell_type": "markdown",
    "id": "6148da69",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Binary Outcome**: Logistic Regression assumes that output is binary. That is, there are only two possible answers such as Yes/No, True/False, Success/Failure etc.\n",
+    "<br>\n",
+    "\n",
+    "**Independence of Observations**: The outcomes of each observation in the data must be independent of the outcomes of the other observations. There should be no relation between them.\n",
+    "<br>\n",
+    "\n",
+    "**Log Odds**: This model assumes that the relation between predictor variables and log of odds are linear, irrespective of whether the relation between the predictor variables and the outcomes are linear. We'll look into what Log Odds is later.\n",
+    "\n",
+    "**Absence of Multicollinearity**: This model assumes that the predictor variables are not correlated with each other, or there is less correlation.\n",
+    "\n",
+    "**Large Sample Size**: Logistic Regression works best with large sample datasets. There is no bound to what the minimum value is, yet it is important to use a lot of samples in the data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a8b4c7",
+   "metadata": {},
+   "source": [
+    "### Log Odds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "434a4783",
+   "metadata": {},
+   "source": [
+    "**Odds** is the ratio of the chance of an event occuring to the chance of the same event not occuring. It is different from probability because probability talks about the chances of an event occuring to the total possible outcomes. \n",
+    "<br>\n",
+    "\n",
+    "For example, in case of tossing a coin, the probability is $\\frac {1}{2}$, but the odds is $1$ or often said *50 50*. So basically, odds for an event is: $$\\text {odds} = \\frac {f(x)}{1 - f(x)}$$\n",
+    "Then **log odds** simply means the logarithm of odds of an event. So $$\\text {log odds} = \\text {log}  \\Big( \\frac {f(x)}{1 - f(x)} \\Big)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631b193d",
+   "metadata": {},
+   "source": [
+    "## Log Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a8a7ba7",
+   "metadata": {},
+   "source": [
+    "Log loss is the evaluation measure to check the performance of the classification model. It measures the amount of divergence of predicted probability with the actual label. So lesser the log loss value, more perfect the model is. Hence, for a perfect model, log loss value is 0.\n",
+    "<br>\n",
+    "\n",
+    "For a dataset with $N$ samples, log loss is: $$-\\frac{1}{N}\\sum_{i = 1}^{N} \\big[y_i\\log(p_i) + (1-y_i)\\log(1-p_i)\\big]$$ where $i$ is the $i^\\text {th}$ observation in the dataset."
+   ]
   }
  ],
  "metadata": {
