--- a/Semester 1/CS1704 - FDS/supervised_learning_II.ipynb
+++ b/Semester 1/CS1704 - FDS/supervised_learning_II.ipynb
@@ -404,7 +404,7 @@
    "id": "766ec3b8",
    "metadata": {},
    "source": [
-    "# Ridge Regression"
+    "## Ridge Regression"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "id": "90ebea53",
    "metadata": {},
    "source": [
-    "## Ordinary Least Squares (OLS)"
+    "### Ordinary Least Squares (OLS)"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "id": "400ff27b",
    "metadata": {},
    "source": [
-    "# Logistic Regression"
+    "## Logistic Regression"
    ]
   },
   {
@@ -534,7 +534,7 @@
    "id": "b28dc1ad",
    "metadata": {},
    "source": [
-    "## Assumptions of Logistic Regression"
+    "### Assumptions of Logistic Regression"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "id": "77a8b4c7",
    "metadata": {},
    "source": [
-    "### Log Odds"
+    "#### Log Odds"
    ]
   },
   {
@@ -580,7 +580,7 @@
    "id": "631b193d",
    "metadata": {},
    "source": [
-    "## Log Loss"
+    "### Log Loss"
    ]
   },
   {
