--- a/Semester 1/CS1704 - FDS/preprocessing.ipynb
+++ b/Semester 1/CS1704 - FDS/preprocessing.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "To compute the nearest neighbours, it used euclidean distance, which is calcuulated using the formula:\n",
+    "To compute the nearest neighbours, it uses euclidean distance, which is calculated using the formula:\n",
     "$$\\text {dist} = \\sqrt {\\text {weight} \\cdot \\text {(distance between the coordinates)}^2}$$\n",
     "\n",
     "<br>\n",
@@ -331,6 +331,8 @@
     "Now the euclidian distance becomes : $$\\sqrt {\\frac {3}{2} \\cdot 13} = \\sqrt {\\frac {39}{2}}$$\n",
     "\n",
     "<br>\n",
+    "\n",
+    "Find the distances with the other remaining rows (only the third row in this case) and compute the mean of `n` nearest neighbors (`n` least distances).\n",
     "\n",
     "To use this imputer, import `KNNImputer` from `sklearn.preprocessing`."
    ]
@@ -924,14 +926,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8561d4b1",
-   "metadata": {},
-   "source": [
-    "#### MultiLabelBinarizer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e88d00f8",
    "metadata": {},
    "source": [
@@ -974,6 +968,14 @@
     "\n",
     "lb = LabelBinarizer()\n",
     "lb.fit_transform(np.array(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b917e489",
+   "metadata": {},
+   "source": [
+    "#### MultiLabelBinarizer"
    ]
   },
   {
