--- a/Semester 1/CS1704 - FDS/preprocessing.ipynb
+++ b/Semester 1/CS1704 - FDS/preprocessing.ipynb
@@ -935,7 +935,8 @@
     "If the cell has 0, that particular label is not present in that row, otherwise it is.\n",
     "<br>\n",
     "\n",
-    "It is different from LabelBinarizer because MultiLabelBinarizer accepts a multi-column matrix as input, whereas LabelBinarizer accepts only a column matrix.\n",
+    "It is different from a OneHotEncoder because in case of 2 classes, this returns only 1 column, whereas OneHotEncoder returns 2 columns.\n",
+    "<br>\n",
     "\n",
     "It can be used by importing the `LabelBinarizer` class from the `sklearn` library."
    ]
@@ -987,6 +988,9 @@
     "<br>\n",
     "\n",
     "If the cell has 0, that particular label is not present in that row, otherwise it is.\n",
+    "<br>\n",
+    "\n",
+    "It is different from LabelBinarizer because MultiLabelBinarizer accepts a multi-column matrix as input, whereas LabelBinarizer accepts only a column matrix.\n",
     "\n",
     "It can be used by importing the `MultiLabelBinarizer` class from the `sklearn` library."
    ]
